<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/item_horizontal_margin"
        android:layout_marginRight="@dimen/item_horizontal_margin"
        android:layout_marginTop="@dimen/item_vertical_margin"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/textview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text=""
            android:textSize="18sp"
            android:paddingTop="@dimen/item_horizontal_margin"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            />

        <TextView
            android:id="@+id/textview_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_below="@+id/textview_title"
            android:paddingBottom="@dimen/item_horizontal_margin"
            android:text="@string/rating"
            android:textSize="16sp"
            android:textColor="@color/lightGray"/>

        <ImageView
            android:id="@+id/imageview_profile"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_below="@+id/textview_rating"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/movie_image"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

        <LinearLayout
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/imageview_profile">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textview_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/released_on"
                    android:textSize="18sp"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"/>

                <Button
                    android:id="@+id/button_play_trailer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textview_release_date"
                    android:layout_marginTop="16dp"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/list_item_vertical_margin"
                    android:paddingBottom="@dimen/list_item_vertical_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin_medium"
                    android:text="@string/play_trailer"
                    android:background="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textColor="@color/lightGray"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textview_original_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:text="@string/original_language"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textview_adult"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textview_original_language"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingBottom="@dimen/item_horizontal_margin"
                    android:textSize="16sp"
                    android:textColor="@color/lightGray"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textview_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/details"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/item_horizontal_margin"
            android:text="@string/overview"
            android:textSize="16sp"
            android:textColor="@color/lightGray"/>

    </RelativeLayout>

</LinearLayout>